# ICT-Project1-KOR

./: .flake8  .gitignore  README.md  e --show-toplevel  pyproject.toml
.github/workflows/: ci.yml
backend/: main.py  models.py  requirements.txt  routes.py  services.py
backend/tests/: conftest.py  test_api_e2e.py  test_services.py
deployment/: interview-analyzer.service  nginx.conf
frontend/app/: .env.local  .gitignore  index.html  package-lock.json  package.json
frontend/app/src/: App.css  App.jsx  index.css
research/: integrated_pipeline.py  llm_interview_analysis_full.py  llm_secure_analysis_system.py
