[tool.black]
line-length = 88
extend-exclude = '''
(
  frontend/app/node_modules
  | \.venv
  | venv
  | __pycache__
  | \.git
)
'''

[project]
name = "project4-fin"
version = "0.1.0"
description = "AI Cross-Interview Analyzer"
authors = [
    { name = "CE2L", email = "ktae3102@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openai (>=2.15.0,<3.0.0)", "python-dotenv (>=1.2.1,<2.0.0)", "requests (>=2.32.5,<3.0.0)", "pydantic (>=2.12.5,<3.0.0)", "uvicorn (>=0.40.0,<0.41.0)", "fastapi (>=0.128.0,<0.129.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "isort (>=7.0.0,<8.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
